correct name of the picture

--- a/portfolio.html
+++ b/portfolio.html
@@ -300,7 +300,7 @@
                       <source
                         srcset="
                           ./images/portfolio/meditaion-app.jpg        1x,
-                          ./images/portfolio/meditaion-app.jpg-2x.jpg 2x
+                          ./images/portfolio/meditaion-app-2x.jpg 2x
                         "
                         media="(min-width: 1158px)"
                       />
@@ -343,7 +343,7 @@
                       <source
                         srcset="
                           ./images/portfolio/taxi-service.jpg        1x,
-                          ./images/portfolio/taxi-service.jpg-2x.jpg 2x
+                          ./images/portfolio/taxi-service-2x.jpg 2x
                         "
                         media="(min-width: 1158px)"
                       />
@@ -387,7 +387,7 @@
                       <source
                         srcset="
                           ./images/portfolio/screen.jpg        1x,
-                          ./images/portfolio/screen.jpg-2x.jpg 2x
+                          ./images/portfolio/screen-2x.jpg 2x
                         "
                         media="(min-width: 1158px)"
                       />
@@ -431,7 +431,7 @@
                       <source
                         srcset="
                           ./images/portfolio/courses.jpg        1x,
-                          ./images/portfolio/courses.jpg-2x.jpg 2x
+                          ./images/portfolio/courses-2x.jpg 2x
                         "
                         media="(min-width: 1158px)"
                       />
@@ -475,7 +475,7 @@
                       <source
                         srcset="
                           ./images/portfolio/inst-concept.jpg        1x,
-                          ./images/portfolio/inst-concept.jpg-2x.jpg 2x
+                          ./images/portfolio/inst-concept-2x.jpg 2x
                         "
                         media="(min-width: 1158px)"
                       />
