--- a/portfolio.html
+++ b/portfolio.html
@@ -212,7 +212,7 @@
                           ./images/portfolio/banking-concept.jpg    1x,
                           ./images/portfolio/banking-concept-2x.jpg 2x
                         "
-                        media="(min-width: 1158px)"
+                        media="(min-width: 1200px)"
                       />
                       <source
                         srcset="
@@ -258,7 +258,7 @@
                           ./images/portfolio/cashless-payment.jpg    1x,
                           ./images/portfolio/cashless-payment-2x.jpg 2x
                         "
-                        media="(min-width: 1158px)"
+                        media="(min-width: 1200px)"12
                       />
                       <source
                         srcset="
@@ -302,7 +302,7 @@
                           ./images/portfolio/meditaion-app.jpg        1x,
                           ./images/portfolio/meditaion-app-2x.jpg 2x
                         "
-                        media="(min-width: 1158px)"
+                        media="(min-width: 1200px)"
                       />
                       <source
                         srcset="
@@ -345,7 +345,7 @@
                           ./images/portfolio/taxi-service.jpg        1x,
                           ./images/portfolio/taxi-service-2x.jpg 2x
                         "
-                        media="(min-width: 1158px)"
+                        media="(min-width: 1200px)"
                       />
                       <source
                         srcset="
@@ -389,7 +389,7 @@
                           ./images/portfolio/screen.jpg        1x,
                           ./images/portfolio/screen-2x.jpg 2x
                         "
-                        media="(min-width: 1158px)"
+                        media="(min-width: 1200px)"
                       />
                       <source
                         srcset="
@@ -433,7 +433,7 @@
                           ./images/portfolio/courses.jpg        1x,
                           ./images/portfolio/courses-2x.jpg 2x
                         "
-                        media="(min-width: 1158px)"
+                        media="(min-width: 1200px)"
                       />
                       <source
                         srcset="
@@ -477,7 +477,7 @@
                           ./images/portfolio/inst-concept.jpg        1x,
                           ./images/portfolio/inst-concept-2x.jpg 2x
                         "
-                        media="(min-width: 1158px)"
+                        media="(min-width: 1200px)"
                       />
                       <source
                         srcset="
@@ -524,7 +524,7 @@
                           ./images/portfolio/organic-food.jpg    1x,
                           ./images/portfolio/organic-food-2x.jpg 2x
                         "
-                        media="(min-width: 1158px)"
+                        media="(min-width: 1200px)"
                       />
                       <source
                         srcset="
@@ -568,7 +568,7 @@
                           ./images/portfolio/coffee.jpg    1x,
                           ./images/portfolio/coffee-2x.jpg 2x
                         "
-                        media="(min-width: 1158px)"
+                        media="(min-width: 1200px)"
                       />
                       <source
                         srcset="
